--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -1,65 +1,93 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.EarthquakeActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
+    android:fitsSystemWindows="true">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+    <RelativeLayout
+        android:id="@+id/relative_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#FFFFFF"
-        tools:listitem="@layout/earthquake_item"/>
+        android:orientation="vertical">
 
-    <!-- Loading indicator is only shown before the first load -->
-    <ProgressBar
-        android:id="@+id/loading_indicator"
-        style="@style/Widget.AppCompat.ProgressBar"
+        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_refresh"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:swipeRefreshLayoutProgressSpinnerBackgroundColor="@color/colorPrimary"
+            android:layout_marginTop="?attr/actionBarSize">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recycler_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="#FFFFFF"
+                tools:listitem="@layout/earthquake_item"/>
+
+        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+
+        <include
+            layout="@layout/toolbar_layout" />
+
+        <!-- Loading indicator is only shown before the first load -->
+        <ProgressBar
+            android:id="@+id/main_loading_indicator"
+            style="@style/Widget.AppCompat.ProgressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:visibility="visible"/>
+
+        <!-- Empty view and Try again button is only visible when the list has no items. -->
+        <ImageView
+            android:id="@+id/no_internet_image"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingBottom="8dp"
+            android:src="@drawable/ic_no_internet" />
+
+        <TextView
+            android:id="@+id/empty_view_summary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/no_internet_image"
+            android:textAppearance="?android:textAppearanceMedium"
+            android:paddingBottom="8dp"
+            tools:text="No Internet Connection"/>
+
+        <TextView
+            android:id="@+id/empty_view_description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/empty_view_summary"
+            android:textAppearance="?android:textAppearanceSmall"
+            android:paddingBottom="8dp"
+            tools:text="Please Check your Internet Connection"/>
+
+        <Button
+            android:id="@+id/try_again_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/empty_view_description"
+            android:text="@string/try_again"
+            android:textAllCaps="true"
+            android:textAppearance="?android:textAppearanceMedium"/>
+
+    </RelativeLayout>
+
+    <com.google.android.material.navigation.NavigationView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:visibility="visible"/>
+        android:layout_height="match_parent"
+        android:id="@+id/navigationView"
+        android:layout_gravity="start"
+        app:menu="@menu/earthquake_menu"
+        app:headerLayout="@layout/earthquake_header_layout"/>
 
-    <!-- Empty view and Try again button is only visible when the list has no items. -->
-    <ImageView
-        android:id="@+id/no_internet_image"
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        android:layout_centerInParent="true"
-        android:paddingBottom="8dp"
-        android:src="@drawable/ic_no_internet"/>
-
-    <TextView
-        android:id="@+id/empty_view_summary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/no_internet_image"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:paddingBottom="8dp"
-        tools:text="No Internet Connection"/>
-
-    <TextView
-        android:id="@+id/empty_view_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/empty_view_summary"
-        android:textAppearance="?android:textAppearanceMedium"
-        android:paddingBottom="8dp"
-        tools:text="Please Check your Internet Connection"/>
-
-    <Button
-        android:id="@+id/try_again_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/empty_view_description"
-        android:text="@string/try_again"
-        android:textAllCaps="true"
-        android:textAppearance="?android:textAppearanceMedium"/>
-
-</RelativeLayout>
+</androidx.drawerlayout.widget.DrawerLayout>
