--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,33 +16,39 @@
     <!-- Accent color of the app -->
     <color name="colorAccent">#F0514B</color>
 
+    <!-- Color for an properties with magnitude below 0-->
+    <color name="magnitude0Below">#4A61A7</color>
+
     <!-- Color for an properties with magnitude 0 and 2 -->
     <color name="magnitude1">#4A7BA7</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 2 and 3 -->
+    <!-- Magnitude square color for an properties with magnitude between 2 and 3 -->
     <color name="magnitude2">#04B4B3</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 3 and 4 -->
+    <!-- Magnitude square color for an properties with magnitude between 3 and 4 -->
     <color name="magnitude3">#10CAC9</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 4 and 5 -->
+    <!-- Magnitude square color for an properties with magnitude between 4 and 5 -->
     <color name="magnitude4">#F5A623</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 5 and 6 -->
+    <!-- Magnitude square color for an properties with magnitude between 5 and 6 -->
     <color name="magnitude5">#FF7D50</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 6 and 7 -->
+    <!-- Magnitude square color for an properties with magnitude between 6 and 7 -->
     <color name="magnitude6">#FC6644</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 7 and 8 -->
+    <!-- Magnitude square color for an properties with magnitude between 7 and 8 -->
     <color name="magnitude7">#E75F40</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 8 and 9 -->
+    <!-- Magnitude square color for an properties with magnitude between 8 and 9 -->
     <color name="magnitude8">#E13A20</color>
 
-    <!-- Magnitude circle color for an properties with magnitude between 9 and 10 -->
+    <!-- Magnitude square color for an properties with magnitude between 9 and 10 -->
     <color name="magnitude9">#D93218</color>
 
-    <!-- Magnitude circle color for an properties with magnitude over 10 -->
+    <!-- Magnitude square color for an properties with magnitude over 10 -->
     <color name="magnitude10plus">#C03823</color>
+
+    <!-- Felt circle color -->
+    <color name="feltColor">#C2FF33</color>
 </resources>
