--- a/app/src/main/res/layout/earthquake_activity.xml
+++ b/app/src/main/res/layout/earthquake_activity.xml
@@ -34,7 +34,7 @@
 
         <!-- Loading indicator is only shown before the first load -->
         <ProgressBar
-            android:id="@+id/main_loading_indicator"
+            android:id="@+id/loading_indicator"
             style="@style/Widget.AppCompat.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
