--- a/app/src/main/res/layout/earthquake_header_layout.xml
+++ b/app/src/main/res/layout/earthquake_header_layout.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="96dp"
+    android:layout_height="76dp"
     android:background="@color/colorPrimary"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
@@ -13,8 +14,11 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="@string/app_name"
+        android:textAlignment="textStart"
+        android:paddingTop="16dp"
         android:gravity="center"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"/>
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@android:color/white"
+        tools:ignore="RtlCompat" />
 
 </LinearLayout>
