--- a/app/src/main/res/layout/earthquake_header_layout.xml
+++ b/app/src/main/res/layout/earthquake_header_layout.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="76dp"
-    android:background="@color/colorPrimary"
+    android:background="@color/red"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:layout_marginTop="16dp"
