--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -5,5 +5,5 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolBar"
     android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-    android:background="@color/colorPrimary"
+    android:background="@color/red"
     app:titleTextColor="@android:color/white" />
